output/LeverageSIR_find_validate_p8/foundry_validation/F-001_Funded_vault_can_be_initialized_by_anyon/forge_stdout_attempt5.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x00000000001271551295307aCC16bA1e7E0d4281". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x00000000001271551295307aCC16bA1e7E0d4281". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:92:49:
   |
92 |     address internal constant CALLBACK_CALLER = 0x00000000001271551295307acc16ba1e7e0d4281;
   |                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

